# buddy-bridge

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
crates/bridged/: Cargo.toml
crates/bridged/src/: main.rs
crates/gate/: Cargo.toml
crates/gate/src/: main.rs
