[package]
name = "bridged"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "bridged"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync", "signal"] }
btleplug = "0.11"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = "1"
anyhow = "1"
