[package]
name = "gate"
edition.workspace = true
version.workspace = true
license.workspace = true

# The PreToolUse hook client. Deliberately std-only (no async runtime) so the
# cold-start cost on every Bash tool call is a few milliseconds, not tens.
[[bin]]
name = "buddy-gate"
path = "src/main.rs"

[dependencies]
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
